--- a/Pan3/Info.plist
+++ b/Pan3/Info.plist
@@ -33,5 +33,7 @@
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
+	<key>NFCReaderUsageDescription</key>
+	<string>此应用需要NFC功能来写入卡实现快捷方式使用</string>
 </dict>
 </plist>
